更新附件